feat: 完成了自定义主题

--- a/themes/snow-white/languages/en.yml
+++ b/themes/snow-white/languages/en.yml
@@ -15,6 +15,10 @@ post:
 search:
   search: Search
 
+page:
+  next: Older Posts
+  prev: Newer Posts
+
 footer:
   powered_prefix: "Powered by"
   powered: ""
