--- a/source/_posts/从扫码枪说明书看创业.md
+++ b/source/_posts/从扫码枪说明书看创业.md
@@ -10,16 +10,16 @@ tags:
 
 最近在对接某一开源商城系统，其中一个功能便是要支持线下支付，故而买了一个扫码枪用来测试扫码功能。
 
-购买的时考虑到只是测试使用，直接买了最为便宜的一款，价格不到50元。产品收到，拆开包装合，接上电脑便开始使用。第二日收拾盒子时发现里面有一本厚厚的书明书。当时我的第一感觉是这扫码枪全新只有一个按钮，对接条码按下按钮就能读取，如果简单的一个产品为啥需要这么厚的说明书，莫非还要设置不都讲些啥？
+购买的时考虑到只是测试使用，直接买了最为便宜的一款，价格不到50元。产品收到，拆开包装盒，接上电脑便开始使用。第二日收拾盒子时发现里面有一本厚厚的书明书。当时我的第一感觉是这扫码枪全新只有一个按钮，对接条码按下按钮就能读取，这么简单的一个产品为啥需要这么厚的说明书，莫非还要设置不成，这本说明书里都讲些啥？
 
 好奇之下翻了翻。翻开说明书才发现是我肤浅了！没错就是这么个拿手上按一下按钮就能用的小设备，说明书上大概有20种不同的配置！涵盖识读模式、延迟、出厂设置、结束符设置、扫描模式等等。不仅这么多配置的数量没想到，而且配置的方式也是之前没有想到的：厂家也把个配置项做成了条码，扫码产品本身扫一下就能完成设置。
 
-多简单，使用产品本身最大也是唯一的功能，就能轻轻松松的实现自定义设置，不可谓不是大道至简。
+设置是这么的简单，使用产品本身最大也是唯一的功能扫一扫，就能轻轻松松的实现自定义设置，不可谓不是大道至简。
 
 相信扫码枪厂家也知道，这个产品大部分的买家都知道如何使用，甚至都不会看说明书，即使专业用户需要更改默认设置的也不多，即便如此，他们还是把产品做得很有深度。
 
-同样，做为一个创业者，我们产品在满足大部分的常境规用户，还需要精益求精，潜心打磨，在细节处，在后台，都要精心设计和对待，就满足非普通用户之外的专业用户需要。
+同样，做为一个创业者，我们产品在满足大部分的常境规用户，还需要学习这种精益求精的精神，潜心打磨，在细节处，在后台，也要认真的去设计和对待，以满足普通用户之外的专业用户需要，从而赢得口碑。
 
-而所谓的”极致”，就是在自己创业的领域，做到比绝大多数同行优秀一点，专注努力，步步为营，稳扎稳打。
+我所理解的”极致”，就是在自己创业的领域，做到比绝大多数同行优秀一点，专注努力，步步为营，稳扎稳打。
 
 突发的感慨，致自已，致伙伴，加油！
